VYRKCATG-39: Finished the additional resources component.

--- a/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
+++ b/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
@@ -274,6 +274,12 @@ node--teaser--product:
   js:
     js/libraries/node/teaser--product.js: {}
 
+node--resource--media-page:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/resource--media-page.css: { }
+
 node--teaser--media-page:
   version: 1.x
   css:
@@ -333,6 +339,13 @@ paragraph--full--content-callout:
   css:
     component:
       css/libraries/paragraph/full--content-callout.css: {}
+
+# Content Callout #
+paragraph--full--digital-resources:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--digital-resources.css: {}
 
 # Embed View #
 paragraph--full--embed-view:
