VYRKCATG-350: Switched GW AU to use its new migrations module and disabled the original GW module.

--- a/config/gearwrench_au/default/core.extension.yml
+++ b/config/gearwrench_au/default/core.extension.yml
@@ -60,7 +60,7 @@ module:
   filter: 0
   focal_point: 0
   gearwrench_core: 0
-  gearwrench_migrations: 0
+  gearwrench_au_migrations: 0
   gearwrench_product_category_filtering: 0
   google_tag: 0
   help: 0
