--- a/config/crescenttool/default/webform.webform.contact_us.yml
+++ b/config/crescenttool/default/webform.webform.contact_us.yml
@@ -56,6 +56,7 @@ elements: |-
     '#type': email
     '#title': 'Email Address'
     '#required': true
+    '#pattern': '^[a-zA-Z0-9.!#$%&''*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$'
   phone_number:
     '#type': tel
     '#title': 'Phone Number'
