--- a/config/crescenttool_au/default/webform.webform.contact.yml
+++ b/config/crescenttool_au/default/webform.webform.contact.yml
@@ -15,16 +15,17 @@ id: contact
 title: Contact
 description: 'Basic email contact webform.'
 category: ''
-elements: |
+elements: |-
   name:
     '#title': 'Your Name'
     '#type': textfield
     '#required': true
     '#default_value': '[current-user:display-name]'
   email:
-    '#title': 'Your Email'
     '#type': email
+    '#title': 'Your Email'
     '#required': true
+    '#pattern': '^[a-zA-Z0-9.!#$%&''*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$'
     '#default_value': '[current-user:mail]'
   subject:
     '#title': Subject
