--- a/config/crescenttool_au/default/webform.webform.email_sign_up.yml
+++ b/config/crescenttool_au/default/webform.webform.email_sign_up.yml
@@ -37,6 +37,7 @@ elements: |-
       '#placeholder': 'Email Address'
       '#required': true
       '#required_error': Required
+      '#pattern': '^[a-zA-Z0-9.!#$%&''*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$'
   flexbox_03:
     '#type': webform_flexbox
     privacy_policy:
