--- a/config/crescenttool_au/default/webform.webform.warranty_replacement_form.yml
+++ b/config/crescenttool_au/default/webform.webform.warranty_replacement_form.yml
@@ -106,6 +106,7 @@ elements: |-
           '#title': 'Email Address'
           '#required': true
           '#required_error': Required
+          '#pattern': '^[a-zA-Z0-9.!#$%&''*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$'
         phone_number:
           '#type': tel
           '#title': 'Phone Number'
