--- a/config/gearwrench_au/default/webform.webform.contact_us.yml
+++ b/config/gearwrench_au/default/webform.webform.contact_us.yml
@@ -79,6 +79,7 @@ elements: |-
     '#type': email
     '#title': 'Email Address'
     '#required': true
+    '#pattern': '^[a-zA-Z0-9.!#$%&''*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$'
   address:
     '#type': webform_address
     '#title': Address
