VYRKCATG-272: Added all webforms to the config ignore AND fixed some outstanding config issues.

--- a/config/gearwrench/default/config_export_ignore.settings.yml
+++ b/config/gearwrench/default/config_export_ignore.settings.yml
@@ -1,2 +1,3 @@
 configuration_names:
-  - 'gearwrench_core.settings:warranty_highest_exported_sid'
+  0: 'gearwrench_core.settings:warranty_highest_exported_sid'
+  2: 'webform.webform.*'
