--- a/config/gearwrench/default/config_ignore.settings.yml
+++ b/config/gearwrench/default/config_ignore.settings.yml
@@ -3,3 +3,7 @@ _core:
 ignored_config_entities:
   - 'block.block.custom_*'
   - 'gearwrench_core.settings:warranty_highest_exported_sid'
+  - 'acquia_connector.settings:spi.site_environment'
+  - 'acquia_connector.settings:spi.site_uuid'
+  - 'search_api.server.acquia_search_server:backend_config.connector_config'
+  - 'webform.webform.*'
