--- a/config/crescenttool/default/config_export_ignore.settings.yml
+++ b/config/crescenttool/default/config_export_ignore.settings.yml
@@ -3,3 +3,4 @@ configuration_names:
   2: 'acquia_connector.settings:spi.site_environment'
   4: 'acquia_connector.settings:spi.site_uuid'
   6: 'search_api.server.acquia_search_server:backend_config.connector_config'
+  8: 'webform.webform.*'
