--- a/config/crescenttool/default/config_ignore.settings.yml
+++ b/config/crescenttool/default/config_ignore.settings.yml
@@ -4,3 +4,4 @@ ignored_config_entities:
   - 'acquia_connector.settings:spi.site_environment'
   - 'acquia_connector.settings:spi.site_uuid'
   - 'search_api.server.acquia_search_server:backend_config.connector_config'
+  - 'webform.webform.*'
