VYRKCATG-39: Added the Digital Resources component to CT AU.

--- a/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
+++ b/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
@@ -340,7 +340,7 @@ paragraph--full--content-callout:
     component:
       css/libraries/paragraph/full--content-callout.css: {}
 
-# Content Callout #
+# Digital Resources #
 paragraph--full--digital-resources:
   version: 1.x
   css:
