--- a/config/crescenttool_au/default/field.field.node.page.field_components.yml
+++ b/config/crescenttool_au/default/field.field.node.page.field_components.yml
@@ -10,6 +10,7 @@ dependencies:
     - paragraphs.paragraphs_type.content
     - paragraphs.paragraphs_type.content_2_column
     - paragraphs.paragraphs_type.content_callout_container
+    - paragraphs.paragraphs_type.digital_resources
     - paragraphs.paragraphs_type.embed_block
     - paragraphs.paragraphs_type.embed_iframe
     - paragraphs.paragraphs_type.embed_view
@@ -40,95 +41,96 @@ settings:
   handler: 'default:paragraph'
   handler_settings:
     target_bundles:
+      accordion: accordion
+      banner_cta_slider: banner_cta_slider
       content: content
       content_2_column: content_2_column
-      accordion: accordion
+      content_callout_container: content_callout_container
+      digital_resources: digital_resources
       embed_block: embed_block
       embed_iframe: embed_iframe
       embed_view: embed_view
       featured_content: featured_content
+      featured_links: featured_links
       featured_media: featured_media
       hero: hero
-      featured_links: featured_links
+      product_slider: product_slider
       pullquote: pullquote
       section: section
-      tabs: tabs
-      content_callout_container: content_callout_container
-      product_slider: product_slider
       steps: steps
-      banner_cta_slider: banner_cta_slider
+      tabs: tabs
     negate: 0
     target_bundles_drag_drop:
       accordion:
-        weight: -41
+        weight: -49
         enabled: true
       accordion_item:
-        weight: -40
+        weight: -44
         enabled: false
       banner_cta_slide:
-        weight: 27
+        weight: -26
         enabled: false
       banner_cta_slider:
-        weight: 28
+        weight: -48
         enabled: true
-      banner_cta_thumbnails:
-        weight: 29
-        enabled: false
       content:
-        weight: -43
+        weight: -47
         enabled: true
       content_2_column:
-        weight: -42
+        weight: -46
         enabled: true
       content_callout:
-        weight: -27
+        weight: -28
         enabled: false
       content_callout_container:
-        weight: -26
+        weight: -45
+        enabled: true
+      digital_resources:
+        weight: -43
         enabled: true
       embed_block:
-        weight: -39
+        weight: -42
         enabled: true
       embed_iframe:
-        weight: -38
+        weight: -41
         enabled: true
       embed_view:
-        weight: -37
+        weight: -40
         enabled: true
       featured_content:
-        weight: -36
+        weight: -39
         enabled: true
       featured_links:
-        weight: -32
+        weight: -38
         enabled: true
       featured_media:
-        weight: -35
+        weight: -37
         enabled: true
       hero:
-        weight: -34
+        weight: -36
         enabled: true
       hero_slide:
-        weight: -33
+        weight: -35
         enabled: false
       product_slider:
-        weight: -25
+        weight: -34
         enabled: true
       pullquote:
-        weight: -31
+        weight: -33
         enabled: true
       section:
-        weight: -30
+        weight: -32
         enabled: true
       step:
-        weight: -24
+        weight: -27
         enabled: false
       steps:
-        weight: -23
+        weight: -31
         enabled: true
       tabs:
-        weight: -29
+        weight: -30
         enabled: true
       tabs_tab:
-        weight: -28
+        weight: -29
         enabled: false
 field_type: entity_reference_revisions
