--- a/docroot/themes/custom/crescenttool_au/crescenttool_au.libraries.yml
+++ b/docroot/themes/custom/crescenttool_au/crescenttool_au.libraries.yml
@@ -277,6 +277,12 @@ node--teaser--product:
   js:
     js/libraries/node/teaser--product.js: {}
 
+node--resource--media-page:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/resource--media-page.css: { }
+
 node--teaser--media-page:
   version: 1.x
   css:
@@ -351,6 +357,13 @@ paragraph--full--content-callout:
   css:
     component:
       css/libraries/paragraph/full--content-callout.css: {}
+
+# Digital Resources #
+paragraph--full--digital-resources:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--digital-resources.css: {}
 
 # Embed View #
 paragraph--full--embed-view:
