au_migrations: Fixed problem with importing AU categories.

--- a/config/gearwrench_au/default/migrate_plus.migration.gearwrench_au_product_category_pages_level_one.yml
+++ b/config/gearwrench_au/default/migrate_plus.migration.gearwrench_au_product_category_pages_level_one.yml
@@ -1,14 +1,16 @@
-uuid: 2fa0b7b0-9923-4c86-b357-1a6de66dc9c3
+uuid: c9984aa1-2491-4a3b-b7c3-aafc717157ad
 langcode: en
 status: true
 dependencies: {  }
-id: gearwrench_product_category_pages_level_one
+_core:
+  default_config_hash: SydXtgLySufOL0Ei7ibius_RE0fBWEsCfU4FeUGibWk
+id: gearwrench_au_product_category_pages_level_one
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: gearwrench
-label: 'Gearwrench Product Listing Pages - Level One'
+migration_group: gearwrench_au
+label: 'Gearwrench AU Product Listing Pages - Level One'
 source:
   constants:
     bool_0: 0
