--- a/docroot/modules/custom/gearwrench_au_migrations/gearwrench_au_migrations.info.yml
+++ b/docroot/modules/custom/gearwrench_au_migrations/gearwrench_au_migrations.info.yml
@@ -1,4 +1,4 @@
-name: Gearwrench Migrations
+name: Gearwrench Australia Migrations
 type: module
 description: A collection of migrations for Gearwrench.
 package: gearwrench
