--- a/config/gearwrench_au/default/migrate_plus.migration.gearwrench_au_product_category_pages_level_two.yml
+++ b/config/gearwrench_au/default/migrate_plus.migration.gearwrench_au_product_category_pages_level_two.yml
@@ -1,14 +1,16 @@
-uuid: 3fd849bd-ec1f-4e79-90ef-d77f4859e92e
+uuid: 9c6c4a00-a9e6-4300-8285-2cbb4ffee52d
 langcode: en
 status: true
 dependencies: {  }
-id: gearwrench_product_category_pages_level_two
+_core:
+  default_config_hash: IxRMxE8L_EAJZ81KMfjepCJ2sbPWueN2OhdEUa7idY8
+id: gearwrench_au_product_category_pages_level_two
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: gearwrench
-label: 'Gearwrench Product Listing Pages - Level Two'
+migration_group: gearwrench_au
+label: 'Gearwrench AU Product Listing Pages - Level Two'
 source:
   constants:
     bool_0: 0
