--- a/config/gearwrench_au/default/migrate_plus.migration.gearwrench_au_product_classifications_level_three.yml
+++ b/config/gearwrench_au/default/migrate_plus.migration.gearwrench_au_product_classifications_level_three.yml
@@ -1,14 +1,16 @@
-uuid: bbf0762a-fa5d-411b-991d-6d0eca0fc2b8
+uuid: 3fa83436-fab1-45d3-bd51-4222ec6df506
 langcode: en
 status: true
 dependencies: {  }
-id: gearwrench_product_classifications_level_three
+_core:
+  default_config_hash: svcNjpahwjg_nTp8FJZBI1x0BqPtNmE3TBgUqxJpKyk
+id: gearwrench_au_product_classifications_level_three
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: gearwrench
-label: 'Product Classifications - Level Three'
+migration_group: gearwrench_au
+label: 'Gearwrench AU Product Classifications - Level Three'
 source:
   plugin: url
   data_fetcher_plugin: http
