--- a/config/gearwrench_au/default/migrate_plus.migration.gearwrench_au_product_classifications_level_two.yml
+++ b/config/gearwrench_au/default/migrate_plus.migration.gearwrench_au_product_classifications_level_two.yml
@@ -1,14 +1,16 @@
-uuid: 67beef74-d942-493d-bf80-f9dfb3cec74a
+uuid: 922e869c-566b-4cfa-8cc1-a1489e95f88e
 langcode: en
 status: true
 dependencies: {  }
-id: gearwrench_product_classifications_level_two
+_core:
+  default_config_hash: usX99IS_YQOjd21kT8yej3Wr6J46CWM57dohGunrJeQ
+id: gearwrench_au_product_classifications_level_two
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: gearwrench
-label: 'Product Classifications - Level Two'
+migration_group: gearwrench_au
+label: 'Gearwrench AU Product Classifications - Level Two'
 source:
   plugin: url
   data_fetcher_plugin: http
