--- a/config/gearwrench_au/default/migrate_plus.migration.gearwrench_au_product_specifications.yml
+++ b/config/gearwrench_au/default/migrate_plus.migration.gearwrench_au_product_specifications.yml
@@ -1,14 +1,16 @@
-uuid: 48a0ecef-0ed5-499f-8d14-8cc959a9a0dc
+uuid: 10a4184a-efdf-4784-97ad-2592a5d03481
 langcode: en
 status: true
 dependencies: {  }
-id: gearwrench_product_specifications
+_core:
+  default_config_hash: 98aJZ1oMGYMJ79lA54Orvtf5c2xQNTBfmFYyf_IYTzc
+id: gearwrench_au_product_specifications
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: gearwrench
-label: 'Product Specifications'
+migration_group: gearwrench_au
+label: 'Gearwrench AU Product Specifications'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
