--- a/docroot/modules/custom/gearwrench_au_migrations/config/install/migrate_plus.migration.gearwrench_au_product_classifications_level_one.yml
+++ b/docroot/modules/custom/gearwrench_au_migrations/config/install/migrate_plus.migration.gearwrench_au_product_classifications_level_one.yml
@@ -1,14 +1,13 @@
-uuid: feb9cfb9-ac38-4bfb-bfe0-5c3aeffd2ce4
 langcode: en
 status: true
 dependencies: {  }
-id: gearwrench_product_classifications_level_one
+id: gearwrench_au_product_classifications_level_one
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: gearwrench
-label: 'Product Classifications - Level One'
+migration_group: gearwrench_au
+label: 'Gearwrench AU Product Classifications - Level One'
 source:
   plugin: url
   data_fetcher_plugin: http
