--- a/docroot/modules/custom/gearwrench_au_migrations/config/install/migrate_plus.migration.gearwrench_au_products.yml
+++ b/docroot/modules/custom/gearwrench_au_migrations/config/install/migrate_plus.migration.gearwrench_au_products.yml
@@ -1,13 +1,12 @@
-uuid: 9263f34e-bc54-4838-9e29-850eab7a9d18
 langcode: en
 status: true
 dependencies: {  }
-id: gearwrench_products
+id: gearwrench_au_products
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: gearwrench
+migration_group: gearwrench_au
 label: Products
 source:
   constants:
