au_migrations: Fixed the CT AU migrations.

--- a/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_product_classifications_level_three.yml
+++ b/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_product_classifications_level_three.yml
@@ -1,14 +1,13 @@
-uuid: f9e60114-eea9-4b2a-885d-2c80d8c21db4
 langcode: en
 status: true
 dependencies: {  }
-id: crescenttool_product_classifications_level_three
+id: crescenttool_au_product_classifications_level_three
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: crescenttool
-label: 'Product Classifications - Level Three'
+migration_group: crescenttool_au
+label: 'Crescent Australia Product Classifications - Level Three'
 source:
   plugin: url
   data_fetcher_plugin: http
