--- a/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_product_brands.yml
+++ b/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_product_brands.yml
@@ -1,14 +1,13 @@
-uuid: 4f36b107-9e5c-48fb-a455-ae76a922b987
 langcode: en
 status: true
 dependencies: {  }
-id: crescenttool_product_brands
+id: crescenttool_au_product_brands
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: crescenttool
-label: 'Product Brands'
+migration_group: crescenttool_au
+label: 'Crescent Australia Product Brands'
 source:
   plugin: url
   data_fetcher_plugin: http
