--- a/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_product_category_pages_level_two.yml
+++ b/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_product_category_pages_level_two.yml
@@ -1,14 +1,13 @@
-uuid: dcd96587-99dc-45d1-8ef1-076d0b46571d
 langcode: en
 status: true
 dependencies: {  }
-id: crescenttool_product_category_pages_level_two
+id: crescenttool_au_product_category_pages_level_two
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: crescenttool
-label: 'Crescenttool Product Listing Pages - Level Two'
+migration_group: crescenttool_au
+label: 'Crescent Australia Product Listing Pages - Level Two'
 source:
   constants:
     bool_0: 0
