--- a/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_product_classifications_level_one.yml
+++ b/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_product_classifications_level_one.yml
@@ -1,14 +1,13 @@
-uuid: 712f0981-65d1-4be5-9707-cc69e53be865
 langcode: en
 status: true
 dependencies: {  }
-id: crescenttool_product_classifications_level_one
+id: crescenttool_au_product_classifications_level_one
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: crescenttool
-label: 'Product Classifications - Level One'
+migration_group: crescenttool_au
+label: 'Crescent Australia Product Classifications - Level One'
 source:
   plugin: url
   data_fetcher_plugin: http
