--- a/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_product_classifications_level_two.yml
+++ b/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_product_classifications_level_two.yml
@@ -1,14 +1,13 @@
-uuid: 3dfa221a-fd25-4f14-8fc6-dd1d03e4960d
 langcode: en
 status: true
 dependencies: {  }
-id: crescenttool_product_classifications_level_two
+id: crescenttool_au_product_classifications_level_two
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: crescenttool
-label: 'Product Classifications - Level Two'
+migration_group: crescenttool_au
+label: 'Crescent Australia Product Classifications - Level Two'
 source:
   plugin: url
   data_fetcher_plugin: http
