--- a/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_product_specifications.yml
+++ b/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_product_specifications.yml
@@ -1,14 +1,13 @@
-uuid: d076b2fc-7580-46d6-9b02-4251d5aac60a
 langcode: en
 status: true
 dependencies: {  }
-id: crescenttool_product_specifications
+id: crescenttool_au_product_specifications
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: crescenttool
-label: 'Product Specifications'
+migration_group: crescenttool_au
+label: 'Crescent Australia Product Specifications'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
