--- a/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_products.yml
+++ b/docroot/modules/custom/crescenttool_au_migrations/config/install/migrate_plus.migration.crescenttool_au_products.yml
@@ -1,14 +1,13 @@
-uuid: e20f6897-3f53-4606-b119-1280f4e3621b
 langcode: en
 status: true
 dependencies: {  }
-id: crescenttool_products
+id: crescenttool_au_products
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: crescenttool
-label: Products
+migration_group: crescenttool_au
+label: 'Crescent Australia Products'
 source:
   constants:
     bool_0: 0
