--- a/docroot/modules/custom/crescenttool_au_migrations/crescenttool_au_migrations.info.yml
+++ b/docroot/modules/custom/crescenttool_au_migrations/crescenttool_au_migrations.info.yml
@@ -1,4 +1,4 @@
-name: Crescent Tool Migrations
+name: Crescent Australia Tool Migrations
 type: module
 description: A collection of migrations for Crescent Tools.
 package: crescenttool
