added brand js file for mobile filtering,  updated css, removed empty blocks in resource-media.scss

--- a/docroot/themes/custom/crescenttool_au/crescenttool_au.libraries.yml
+++ b/docroot/themes/custom/crescenttool_au/crescenttool_au.libraries.yml
@@ -241,6 +241,13 @@ node--full--product-brand:
   css:
     component:
       css/libraries/node/full--product-brand.css: { }
+  js:
+    js/libraries/node/full--product-brand.js: { }
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+    - crescenttool_au/library--jquery-roving-tabindex
 
 node--full--product-industry:
   version: 1.x
