Updated GW AU GTM id

--- a/config/gearwrench_au/local/google_tag.container.primary.yml
+++ b/config/gearwrench_au/local/google_tag.container.primary.yml
@@ -1,4 +1,4 @@
-uuid: d2d2170e-fdb9-4c44-9354-1e8686aec4d9
+uuid: bccb378d-d163-442c-af2d-c3599177bb8b
 langcode: en
 status: true
 dependencies:
@@ -6,8 +6,8 @@ dependencies:
     - node
     - taxonomy
     - webform
-id: google_tag_59x3zt8
-label: 'Google Tag 5CLZPGD'
+id: primary
+label: Primary
 weight: 0
 container_id: GTM-5CLZPGD
 data_layer: dataLayer
@@ -33,9 +33,7 @@ path_list: |-
   /user/*/edit*
   /user/*/cancel*
 role_toggle: 'exclude listed'
-role_list:
-  authenticated: authenticated
-  administrator: administrator
+role_list: {  }
 status_toggle: 'exclude listed'
 status_list: |-
   403
