--- a/config/gearwrench_au/default/google_tag.container.primary.yml
+++ b/config/gearwrench_au/default/google_tag.container.primary.yml
@@ -8,7 +8,7 @@ dependencies:
 id: primary
 label: Primary
 weight: 0
-container_id: GTM-59X3ZT8
+container_id: GTM-5CLZPGD
 data_layer: dataLayer
 include_classes: false
 whitelist_classes: |-
