gw_au_responsive_styles: Fixed responsive image styles.

--- a/config/gearwrench_au/default/responsive_image.styles.hero_basic.yml
+++ b/config/gearwrench_au/default/responsive_image.styles.hero_basic.yml
@@ -17,7 +17,7 @@ image_style_mappings:
       sizes_image_styles:
         - hero_banner
         - hero_banner_mobile
-    breakpoint_id: gearwrench.All
+    breakpoint_id: gearwrench_au.All
     multiplier: 1x
-breakpoint_group: gearwrench
+breakpoint_group: gearwrench_au
 fallback_image_style: hero_banner
