--- a/config/gearwrench_au/default/responsive_image.styles.short_hero.yml
+++ b/config/gearwrench_au/default/responsive_image.styles.short_hero.yml
@@ -25,7 +25,7 @@ image_style_mappings:
         - medium_1x1
         - medium_landscape_5x4
         - small_landscape_4x3
-    breakpoint_id: gearwrench.All
+    breakpoint_id: gearwrench_au.All
     multiplier: 1x
-breakpoint_group: gearwrench
+breakpoint_group: gearwrench_au
 fallback_image_style: small_landscape_4x3
