--- a/config/gearwrench_au/default/responsive_image.styles.content_half.yml
+++ b/config/gearwrench_au/default/responsive_image.styles.content_half.yml
@@ -13,17 +13,17 @@ image_style_mappings:
   -
     image_mapping_type: image_style
     image_mapping: medium_1x1
-    breakpoint_id: gearwrench.large_min
+    breakpoint_id: gearwrench_au.large_min
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: small_1x1
-    breakpoint_id: gearwrench.medium
+    breakpoint_id: gearwrench_au.medium
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: medium_1x1
-    breakpoint_id: gearwrench.small
+    breakpoint_id: gearwrench_au.small
     multiplier: 1x
   -
     image_mapping_type: sizes
@@ -32,7 +32,7 @@ image_style_mappings:
       sizes_image_styles:
         - medium_1x1
         - small_1x1
-    breakpoint_id: gearwrench.xsmall
+    breakpoint_id: gearwrench_au.xsmall
     multiplier: 1x
-breakpoint_group: gearwrench
+breakpoint_group: gearwrench_au
 fallback_image_style: small_1x1
