--- a/config/gearwrench_au/default/responsive_image.styles.hero.yml
+++ b/config/gearwrench_au/default/responsive_image.styles.hero.yml
@@ -3,24 +3,47 @@ langcode: en
 status: true
 dependencies:
   config:
+    - image.style.biggest_landscape_3x1
     - image.style.huge_landscape_2x1
-    - image.style.large_landscape_2x1
-    - image.style.medium_landscape_2x1
-    - image.style.small_landscape_2x1
+    - image.style.large_1x1
+    - image.style.medium_1x1
+    - image.style.small_portrait_2x3
+  theme:
+    - gearwrench_au
 _core:
   default_config_hash: '-d1sO-6egFuPPJp3QqF6i3jwDeO22WofLVW6vLhcZhE'
 id: hero
 label: Hero
 image_style_mappings:
   -
-    breakpoint_id: responsive_image.viewport_sizing
+    image_mapping_type: image_style
+    image_mapping: biggest_landscape_3x1
+    breakpoint_id: gearwrench_au.grande
     multiplier: 1x
-    image_mapping_type: sizes
-    image_mapping:
-      sizes: 100vw
-      sizes_image_styles:
-        - huge_landscape_2x1
-        - large_landscape_2x1
-        - medium_landscape_2x1
-breakpoint_group: denim
-fallback_image_style: small_landscape_2x1
+  -
+    image_mapping_type: image_style
+    image_mapping: huge_landscape_2x1
+    breakpoint_id: gearwrench_au.xlarge
+    multiplier: 1x
+  -
+    image_mapping_type: image_style
+    image_mapping: large_1x1
+    breakpoint_id: gearwrench_au.large
+    multiplier: 1x
+  -
+    image_mapping_type: image_style
+    image_mapping: medium_1x1
+    breakpoint_id: gearwrench_au.medium
+    multiplier: 1x
+  -
+    image_mapping_type: image_style
+    image_mapping: small_portrait_2x3
+    breakpoint_id: gearwrench_au.small
+    multiplier: 1x
+  -
+    image_mapping_type: image_style
+    image_mapping: small_portrait_2x3
+    breakpoint_id: gearwrench_au.xsmall
+    multiplier: 1x
+breakpoint_group: gearwrench_au
+fallback_image_style: biggest_landscape_3x1
