ct_au_responsive_styles: Fixing the CT AU responsive image styles.

--- a/config/crescenttool_au/default/responsive_image.styles.content_top_bottom.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.content_top_bottom.yml
@@ -21,7 +21,7 @@ image_style_mappings:
         - large_landscape_3x1
         - medium_landscape_3x1
         - small_landscape_3x2
-    breakpoint_id: crescenttool.All
+    breakpoint_id: crescenttool_au.All
     multiplier: 1x
-breakpoint_group: crescenttool
+breakpoint_group: crescenttool_au
 fallback_image_style: medium_landscape_3x1
