--- a/config/crescenttool_au/default/responsive_image.styles.cta_slider_16x9.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.cta_slider_16x9.yml
@@ -14,28 +14,23 @@ label: 'CTA Slider'
 image_style_mappings:
   -
     image_mapping_type: image_style
-    image_mapping: ''
-    breakpoint_id: crescenttool.grande
-    multiplier: 1x
-  -
-    image_mapping_type: image_style
     image_mapping: large_landscape
-    breakpoint_id: crescenttool.large_min
+    breakpoint_id: crescenttool_au.large_min
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: medium_landscape_3x2
-    breakpoint_id: crescenttool.medium_min
+    breakpoint_id: crescenttool_au.medium_min
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: small_landscape_504x310_
-    breakpoint_id: crescenttool.small_min
+    breakpoint_id: crescenttool_au.small_min
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: small_landscape_416x255_
-    breakpoint_id: crescenttool.xsmall
+    breakpoint_id: crescenttool_au.xsmall
     multiplier: 1x
-breakpoint_group: crescenttool
+breakpoint_group: crescenttool_au
 fallback_image_style: large_landscape
