--- a/config/crescenttool_au/default/responsive_image.styles.cta_slider_thumb.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.cta_slider_thumb.yml
@@ -13,7 +13,7 @@ image_style_mappings:
   -
     image_mapping_type: image_style
     image_mapping: banner_cta_slider_large_scaled_height_50
-    breakpoint_id: crescenttool.large_min
+    breakpoint_id: crescenttool_au.large_min
     multiplier: 1x
-breakpoint_group: crescenttool
+breakpoint_group: crescenttool_au
 fallback_image_style: banner_cta_slider_small_scaled_height_40
