--- a/config/crescenttool_au/default/responsive_image.styles.hero.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.hero.yml
@@ -18,32 +18,32 @@ image_style_mappings:
   -
     image_mapping_type: image_style
     image_mapping: biggest_landscape_3x1
-    breakpoint_id: crescenttool.grande
+    breakpoint_id: crescenttool_au.grande
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: huge_landscape_2x1
-    breakpoint_id: crescenttool.xlarge
+    breakpoint_id: crescenttool_au.xlarge
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: large_1x1
-    breakpoint_id: crescenttool.large
+    breakpoint_id: crescenttool_au.large
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: medium_1x1
-    breakpoint_id: crescenttool.medium
+    breakpoint_id: crescenttool_au.medium
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: small_portrait_2x3
-    breakpoint_id: crescenttool.small
+    breakpoint_id: crescenttool_au.small
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: small_portrait_2x3
-    breakpoint_id: crescenttool.xsmall
+    breakpoint_id: crescenttool_au.xsmall
     multiplier: 1x
-breakpoint_group: crescenttool
+breakpoint_group: crescenttool_au
 fallback_image_style: biggest_landscape_3x1
