--- a/config/crescenttool_au/default/responsive_image.styles.hero_basic.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.hero_basic.yml
@@ -17,7 +17,7 @@ image_style_mappings:
       sizes_image_styles:
         - hero_banner
         - hero_banner_mobile
-    breakpoint_id: crescenttool.All
+    breakpoint_id: crescenttool_au.All
     multiplier: 1x
-breakpoint_group: crescenttool
+breakpoint_group: crescenttool_au
 fallback_image_style: hero_banner
