--- a/config/crescenttool_au/default/responsive_image.styles.teaser.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.teaser.yml
@@ -17,7 +17,7 @@ image_style_mappings:
       sizes_image_styles:
         - small_1x1
         - tiny_1x1
-    breakpoint_id: crescenttool.All
+    breakpoint_id: crescenttool_au.All
     multiplier: 1x
-breakpoint_group: crescenttool
+breakpoint_group: crescenttool_au
 fallback_image_style: small_1x1
