--- a/config/crescenttool_au/default/responsive_image.styles.content_callout.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.content_callout.yml
@@ -13,12 +13,12 @@ image_style_mappings:
   -
     image_mapping_type: image_style
     image_mapping: medium_1x1
-    breakpoint_id: crescenttool.large_min
+    breakpoint_id: crescenttool_au.large_min
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: small_1x1
-    breakpoint_id: crescenttool.small_min
+    breakpoint_id: crescenttool_au.small_min
     multiplier: 1x
   -
     image_mapping_type: sizes
@@ -27,7 +27,7 @@ image_style_mappings:
       sizes_image_styles:
         - medium_1x1
         - small_1x1
-    breakpoint_id: crescenttool.xsmall
+    breakpoint_id: crescenttool_au.All
     multiplier: 1x
-breakpoint_group: crescenttool
+breakpoint_group: crescenttool_au
 fallback_image_style: medium_1x1
