--- a/config/crescenttool_au/default/responsive_image.styles.short_hero.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.short_hero.yml
@@ -25,7 +25,7 @@ image_style_mappings:
         - medium_1x1
         - medium_landscape_5x4
         - small_landscape_4x3
-    breakpoint_id: crescenttool.All
+    breakpoint_id: crescenttool_au.All
     multiplier: 1x
-breakpoint_group: crescenttool
+breakpoint_group: crescenttool_au
 fallback_image_style: small_landscape_4x3
