--- a/config/gearwrench_au/default/core.entity_view_display.paragraph.hero_slide.full.yml
+++ b/config/gearwrench_au/default/core.entity_view_display.paragraph.hero_slide.full.yml
@@ -6,11 +6,13 @@ dependencies:
     - core.entity_view_mode.paragraph.full
     - field.field.paragraph.hero_slide.field_class_custom
     - field.field.paragraph.hero_slide.field_content
+    - field.field.paragraph.hero_slide.field_link
     - field.field.paragraph.hero_slide.field_media_background
     - field.field.paragraph.hero_slide.field_style
     - field.field.paragraph.hero_slide.field_title
     - paragraphs.paragraphs_type.hero_slide
   module:
+    - link
     - text
 _core:
   default_config_hash: DsOopD2Ae4BtyASdTc2cM9-ovYf5OPEBxHnGhyvJqQ8
@@ -26,6 +28,18 @@ content:
     third_party_settings: {  }
     weight: 1
     region: content
+  field_link:
+    type: link
+    label: hidden
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    weight: 2
+    region: content
   field_media_background:
     type: entity_reference_entity_view
     label: hidden
@@ -33,7 +47,7 @@ content:
       view_mode: hero
       link: false
     third_party_settings: {  }
-    weight: 2
+    weight: 3
     region: content
   field_title:
     type: string
@@ -45,6 +59,5 @@ content:
     region: content
 hidden:
   field_class_custom: true
-  field_link: true
   field_style: true
   search_api_excerpt: true
