removed role list from tag

--- a/config/crescenttool_au/local/google_tag.container.primary.yml
+++ b/config/crescenttool_au/local/google_tag.container.primary.yml
@@ -33,9 +33,7 @@ path_list: |-
   /user/*/edit*
   /user/*/cancel*
 role_toggle: 'exclude listed'
-role_list:
-  authenticated: authenticated
-  administrator: administrator
+role_list: {  }
 status_toggle: 'exclude listed'
 status_list: |-
   403
