--- a/config/crescenttool_au/default/google_tag.container.primary.yml
+++ b/config/crescenttool_au/default/google_tag.container.primary.yml
@@ -31,11 +31,9 @@ path_list: |-
   /user/*/edit*
   /user/*/cancel*
 role_toggle: 'exclude listed'
-role_list:
-  authenticated: authenticated
-  administrator: administrator
+role_list: { }
 status_toggle: 'exclude listed'
 status_list: |-
   403
   404
-conditions: {  }
+conditions: { }
