ct_au_categories: Updated the level 2 categories.

--- a/config/crescenttool_au/default/migrate_plus.migration.crescenttool_au_product_classifications_level_two.yml
+++ b/config/crescenttool_au/default/migrate_plus.migration.crescenttool_au_product_classifications_level_two.yml
@@ -46,65 +46,66 @@ process:
     source: remote_term_id
     method: row
     value:
-      - W2_729169
-      - W2_729170
-      - W2_729171
-      - W2_729172
-      - W2_729169
-      - W2_729170
-      - W2_729171
-      - W2_729172
-      - W2_729164
-      - W2_729165
-      - W2_729166
-      - W2_729167
-      - W2_729168
-      - W2_748174
-      - W2_748173
-      - W2_729185
-      - W2_729186
-      - W2_734123
-      - W2_743698
-      - W2_743700
-      - W2_743701
-      - W2_743702
-      - W2_729178
-      - W2_729179
-      - W2_743706
-      - W2_729180
-      - W2_729145
-      - W2_729146
-      - W2_729147
-      - W2_729148
-      - W2_740536
-      - W2_743741
-      - W2_740537
-      - W2_729155
-      - W2_729156
-      - W2_729157
-      - W2_729158
-      - W2_729159
-      - W2_729160
-      - W2_729162
-      - W2_729163
-      - W2_729136
-      - W2_729137
-      - W2_729138
-      - W2_729139
-      - W2_729151
-      - W2_729152
-      - W2_729153
-      - W2_729154
-      - W2_764899
-      - W2_729131
-      - W2_729132
-      - W2_729133
-      - W2_729134
-      - W2_729135
-      - W2_729140
-      - W2_729141
-      - W2_729142
-      - W2_729143
+      - W2_729169 # Manual Bolt
+      - W2_729170 # Manual Cable
+      - W2_729171 # Specialty & Ratcheting
+      - W2_729172 # Pneumatic
+      - W2_729164 # Molding
+      - W2_729165 # Indexing
+      - W2_729166 # Rebar Benders
+      - W2_729167 # Nail Pulling
+      - W2_729168 # Adjustable
+      - W2_748174 # Carded Files
+      - W2_748173 # Bulk Files
+      - W2_729185 # Sets
+      - W2_729186 # Accessories
+      - W2_734123 # American Pattern Bulk
+      - W2_743698 # Auto Laser Levels
+      - W2_743700 # Rotary Laser Levels
+      - W2_743701 # Laser Distance Measurers
+      - W2_743702 # Multi Line Laser Levels
+      - W2_729178 # Tapes
+      - W2_729179 # Rules & Squares
+      - W2_743706 # Marking
+      - W2_729180 # Wheels
+      - W2_729145 # 1/4&quot; Drive
+      - W2_729146 # 3/8&quot; Drive
+      - W2_729147 # 1/2&quot; Drive
+      - W2_729148 # 3/4&quot; Drive
+      - W2_740536 # Glue Guns
+      - W2_743741 # Knee Pads
+      - W2_740537 # Hand Cleaner
+      - W2_729155 # Solid Joint
+      - W2_729156 # Slip Joint
+      - W2_729157 # Tongue &amp; Groove
+      - W2_729158 # Locking
+      - W2_729159 # Compound Action
+      - W2_729160 # Electrical
+      - W2_729162 # X2™
+      - W2_729163 # Sets
+      - W2_729136 # Quick Release Ratchets
+      - W2_729137 # Breaker Bars &amp; T-Handles
+      - W2_729138 # Extensions
+      - W2_729139 # Adapters
+      - W2_729151 # Acetate
+      - W2_729152 # Dual Material
+      - W2_729153 # Specialty
+      - W2_729154 # Nutdrivers
+      - W2_764899 # Screwdriver Set 1000V
+      - W2_729131 # Standard
+      - W2_729132 # Deep
+      - W2_729133 # Impact
+      - W2_729134 # Bit
+      - W2_729135 # Pass Thru® X6™
+      - W2_729140 # Adjustable
+      - W2_729141 # Combination
+      - W2_729142 # Specialty
+      - W2_729143 # Pass Thru® X6™
+      - W2_729174 # Snips
+      - W2_729177 # Knives
+      - W2_729176 # Trade Tools
+      - W2_729175 # Saws
+      - W2_729173 # Scissors
   parent:
     -
       plugin: apex_get_classification_parent_term
