Drupal_9.3.6: Did a security update to the latest version of Drupal to 9.3.6. Included all the other module updates available. Exported the config changes this made. Also set the initial class for the Automated Product Import.

--- a/config/crescenttool/default/field.field.paragraph.banner_cta_slide.field_content.yml
+++ b/config/crescenttool/default/field.field.paragraph.banner_cta_slide.field_content.yml
@@ -10,11 +10,8 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    limited_html: limited_html
-    full_html: '0'
-    basic_html: '0'
-    restricted_html: '0'
-    plain_text: '0'
+    allowed_formats:
+      - limited_html
 id: paragraph.banner_cta_slide.field_content
 field_name: field_content
 entity_type: paragraph
