--- a/config/crescenttool/default/field.field.paragraph.step.field_content.yml
+++ b/config/crescenttool/default/field.field.paragraph.step.field_content.yml
@@ -10,11 +10,11 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    basic_html: basic_html
-    limited_html: limited_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: '0'
+    allowed_formats:
+      - basic_html
+      - limited_html
+      - restricted_html
+      - full_html
 id: paragraph.step.field_content
 field_name: field_content
 entity_type: paragraph
