--- a/config/crescenttool/default/field.field.node.product_brand.body.yml
+++ b/config/crescenttool/default/field.field.node.product_brand.body.yml
@@ -10,11 +10,7 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    full_html: '0'
-    basic_html: '0'
-    limited_html: '0'
-    restricted_html: '0'
-    plain_text: '0'
+    allowed_formats: {  }
 id: node.product_brand.body
 field_name: body
 entity_type: node
