--- a/config/crescenttool_au/default/field.field.node.page.body.yml
+++ b/config/crescenttool_au/default/field.field.node.page.body.yml
@@ -10,11 +10,11 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    basic_html: basic_html
-    limited_html: limited_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: '0'
+    allowed_formats:
+      - basic_html
+      - limited_html
+      - restricted_html
+      - full_html
 _core:
   default_config_hash: fppC8uuHOh8Pva-8s4PRPWNyhyP1SiHgPdbElYvFqvY
 id: node.page.body
