--- a/config/crescenttool_au/default/field.field.paragraph.content.field_content.yml
+++ b/config/crescenttool_au/default/field.field.paragraph.content.field_content.yml
@@ -10,11 +10,9 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    limited_html: limited_html
-    full_html: full_html
-    basic_html: '0'
-    restricted_html: '0'
-    plain_text: '0'
+    allowed_formats:
+      - limited_html
+      - full_html
 _core:
   default_config_hash: qFioRpk5TlHl1WIQ1o5xHhkyRMvbIVeV7jUvcK5m84U
 id: paragraph.content.field_content
