--- a/config/crescenttool_au/default/field.field.paragraph.pullquote.field_content.yml
+++ b/config/crescenttool_au/default/field.field.paragraph.pullquote.field_content.yml
@@ -10,11 +10,8 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    plain_text: plain_text
-    basic_html: '0'
-    limited_html: '0'
-    restricted_html: '0'
-    full_html: '0'
+    allowed_formats:
+      - plain_text
 _core:
   default_config_hash: CtttUwTUzBgXtvpBFGytYTwYgRGXNKd_QW0tSP6dZTQ
 id: paragraph.pullquote.field_content
