--- a/config/gearwrench/default/field.field.node.landing_page.body.yml
+++ b/config/gearwrench/default/field.field.node.landing_page.body.yml
@@ -10,11 +10,9 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    limited_html: limited_html
-    plain_text: plain_text
-    basic_html: '0'
-    restricted_html: '0'
-    full_html: '0'
+    allowed_formats:
+      - limited_html
+      - plain_text
 _core:
   default_config_hash: 1KJVq7aOf31bG84B5MdpQkVQOuvDx91E-Bt3nmPuzaM
 id: node.landing_page.body
