--- a/config/gearwrench/default/field.field.node.media_page.body.yml
+++ b/config/gearwrench/default/field.field.node.media_page.body.yml
@@ -10,11 +10,11 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    basic_html: basic_html
-    limited_html: limited_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: '0'
+    allowed_formats:
+      - basic_html
+      - limited_html
+      - restricted_html
+      - full_html
 id: node.media_page.body
 field_name: body
 entity_type: node
