--- a/config/gearwrench_au/default/field.field.node.styleguide.body.yml
+++ b/config/gearwrench_au/default/field.field.node.styleguide.body.yml
@@ -10,11 +10,9 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    limited_html: limited_html
-    plain_text: plain_text
-    basic_html: '0'
-    restricted_html: '0'
-    full_html: '0'
+    allowed_formats:
+      - limited_html
+      - plain_text
 id: node.styleguide.body
 field_name: body
 entity_type: node
