template: removed unused section, added attach library, updated formatting, js: changed function to jquery click

--- a/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
+++ b/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
@@ -158,6 +158,7 @@ block--custom-torque-conversion-calculator:
   js:
     js/libraries/block/torque-conversion-calculator.js: {}
   dependencies:
+    - core/drupal
     - core/jquery
     - core/jquery.once
 
