Enabled memcache and other useful things.

--- a/config/gearwrench_au/local/core.extension.yml
+++ b/config/gearwrench_au/local/core.extension.yml
@@ -85,6 +85,7 @@ module:
   media_library: 0
   media_responsive_thumbnail: 0
   media_video_micromodal: 0
+  memcache: 0
   menu_link_attributes: 0
   menu_link_content: 0
   menu_ui: 0
@@ -99,6 +100,7 @@ module:
   migrate: 0
   migrate_plus: 0
   migrate_tools: 0
+  module_filter: 0
   node: 0
   node_view_permissions: 0
   options: 0
@@ -109,9 +111,11 @@ module:
   path_redirect_import: 0
   permissions_filter: 0
   purge: 0
+  purge_drush: 0
   purge_processor_cron: 0
   purge_processor_lateruntime: 0
   purge_queuer_coretags: 0
+  purge_tokens: 0
   purge_ui: 0
   quick_node_clone: 0
   rdf: 0
