--- a/config/crescenttool_au/local/core.extension.yml
+++ b/config/crescenttool_au/local/core.extension.yml
@@ -84,6 +84,7 @@ module:
   media_library: 0
   media_responsive_thumbnail: 0
   media_video_micromodal: 0
+  memcache: 0
   menu_link_attributes: 0
   menu_link_content: 0
   menu_ui: 0
@@ -98,6 +99,7 @@ module:
   migrate: 0
   migrate_plus: 0
   migrate_tools: 0
+  module_filter: 0
   node: 0
   node_view_permissions: 0
   options: 0
@@ -112,6 +114,7 @@ module:
   purge_processor_cron: 0
   purge_processor_lateruntime: 0
   purge_queuer_coretags: 0
+  purge_tokens: 0
   purge_ui: 0
   quick_node_clone: 0
   rdf: 0
