SetFilterFix: Fixed the Set? filter for GW and CT North America.

--- a/config/crescenttool/default/migrate_plus.migration.crescenttool_product_category_pages_level_three.yml
+++ b/config/crescenttool/default/migrate_plus.migration.crescenttool_product_category_pages_level_three.yml
@@ -82,12 +82,7 @@ process:
     plugin: apex_determine_set_filter_show
     source: remote_id
     allowed_categories:
-      - W3_792548
-      - W3_792549
-      - W3_792550
-      - W3_792551
-      - W3_792552
-      - W3_803453
+      - W3_NONE
 destination:
   plugin: 'entity:node'
 migration_dependencies: {  }
