Removed pull quote from all 4 sites (US and AU)

--- a/config/crescenttool/default/field.field.node.landing_page.field_components.yml
+++ b/config/crescenttool/default/field.field.node.landing_page.field_components.yml
@@ -17,7 +17,6 @@ dependencies:
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
     - paragraphs.paragraphs_type.product_slider
-    - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.steps
     - paragraphs.paragraphs_type.tabs
@@ -47,7 +46,6 @@ settings:
       featured_content: featured_content
       featured_links: featured_links
       featured_media: featured_media
-      pullquote: pullquote
       product_slider: product_slider
       section: section
       tabs: tabs
@@ -111,7 +109,7 @@ settings:
         enabled: true
       pullquote:
         weight: -29
-        enabled: true
+        enabled: false
       section:
         weight: -27
         enabled: true
