--- a/config/gearwrench_au/default/field.field.node.page.field_components.yml
+++ b/config/gearwrench_au/default/field.field.node.page.field_components.yml
@@ -18,7 +18,6 @@ dependencies:
     - paragraphs.paragraphs_type.featured_media
     - paragraphs.paragraphs_type.hero
     - paragraphs.paragraphs_type.product_slider
-    - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.steps
     - paragraphs.paragraphs_type.tabs
@@ -53,7 +52,6 @@ settings:
       featured_media: featured_media
       hero: hero
       product_slider: product_slider
-      pullquote: pullquote
       section: section
       steps: steps
       tabs: tabs
@@ -109,7 +107,7 @@ settings:
         enabled: true
       pullquote:
         weight: -30
-        enabled: true
+        enabled: false
       section:
         weight: -29
         enabled: true
