--- a/config/crescenttool/default/field.field.node.media_page.field_components.yml
+++ b/config/crescenttool/default/field.field.node.media_page.field_components.yml
@@ -16,7 +16,6 @@ dependencies:
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
     - paragraphs.paragraphs_type.product_slider
-    - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.steps
     - paragraphs.paragraphs_type.tabs
@@ -47,7 +46,6 @@ settings:
       featured_links: featured_links
       featured_media: featured_media
       product_slider: product_slider
-      pullquote: pullquote
       section: section
       steps: steps
       tabs: tabs
@@ -100,7 +98,7 @@ settings:
         enabled: true
       pullquote:
         weight: 37
-        enabled: true
+        enabled: false
       section:
         weight: 38
         enabled: true
