--- a/config/crescenttool/default/field.field.node.page.field_components.yml
+++ b/config/crescenttool/default/field.field.node.page.field_components.yml
@@ -18,7 +18,6 @@ dependencies:
     - paragraphs.paragraphs_type.featured_media
     - paragraphs.paragraphs_type.hero
     - paragraphs.paragraphs_type.product_slider
-    - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.steps
     - paragraphs.paragraphs_type.tabs
@@ -48,7 +47,6 @@ settings:
       featured_media: featured_media
       hero: hero
       featured_links: featured_links
-      pullquote: pullquote
       section: section
       tabs: tabs
       content_callout_container: content_callout_container
@@ -113,7 +111,7 @@ settings:
         enabled: true
       pullquote:
         weight: -31
-        enabled: true
+        enabled: false
       section:
         weight: -30
         enabled: true
