--- a/config/crescenttool_au/default/field.field.node.landing_page.field_components.yml
+++ b/config/crescenttool_au/default/field.field.node.landing_page.field_components.yml
@@ -18,7 +18,6 @@ dependencies:
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
     - paragraphs.paragraphs_type.product_slider
-    - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.steps
     - paragraphs.paragraphs_type.tabs
@@ -52,7 +51,6 @@ settings:
       featured_content: featured_content
       featured_links: featured_links
       featured_media: featured_media
-      pullquote: pullquote
       product_slider: product_slider
       section: section
       steps: steps
@@ -115,7 +113,7 @@ settings:
         enabled: true
       pullquote:
         weight: -33
-        enabled: true
+        enabled: false
       section:
         weight: -31
         enabled: true
