--- a/config/crescenttool_au/default/field.field.node.page.field_components.yml
+++ b/config/crescenttool_au/default/field.field.node.page.field_components.yml
@@ -19,7 +19,6 @@ dependencies:
     - paragraphs.paragraphs_type.featured_media
     - paragraphs.paragraphs_type.hero
     - paragraphs.paragraphs_type.product_slider
-    - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.steps
     - paragraphs.paragraphs_type.tabs
@@ -55,7 +54,6 @@ settings:
       featured_media: featured_media
       hero: hero
       product_slider: product_slider
-      pullquote: pullquote
       section: section
       steps: steps
       tabs: tabs
@@ -117,7 +115,7 @@ settings:
         enabled: true
       pullquote:
         weight: -33
-        enabled: true
+        enabled: false
       section:
         weight: -32
         enabled: true
