--- a/config/gearwrench_au/default/field.field.node.landing_page.field_components.yml
+++ b/config/gearwrench_au/default/field.field.node.landing_page.field_components.yml
@@ -17,7 +17,6 @@ dependencies:
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
     - paragraphs.paragraphs_type.product_slider
-    - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.steps
     - paragraphs.paragraphs_type.tabs
@@ -51,7 +50,6 @@ settings:
       featured_links: featured_links
       featured_media: featured_media
       product_slider: product_slider
-      pullquote: pullquote
       section: section
       steps: steps
       tabs: tabs
@@ -107,7 +105,7 @@ settings:
         enabled: true
       pullquote:
         weight: -29
-        enabled: true
+        enabled: false
       section:
         weight: -28
         enabled: true
