VYRKCATG-350: Got the admin form for the download service setup.

--- a/docroot/modules/custom/apex_migrations/apex_migrations.links.menu.yml
+++ b/docroot/modules/custom/apex_migrations/apex_migrations.links.menu.yml
@@ -3,3 +3,9 @@ apex_migrations.pim_upload:
   parent: system.admin_config_development
   description: 'A form to upload and replace the existing PIM file.'
   route_name: apex_migrations.pim_upload
+
+apex_migrations.product_download:
+  title: 'APEX Product Download Settings'
+  parent: system.admin_config_development
+  description: 'A form to change the product download configuration.'
+  route_name: apex_migrations.product_download
