--- a/docroot/modules/custom/apex_migrations/apex_migrations.services.yml
+++ b/docroot/modules/custom/apex_migrations/apex_migrations.services.yml
@@ -1,6 +1,6 @@
 services:
   # Drush commands
-  apex_common.product_import_service:
-    class: Drupal\apex_migrations\Commands\ProductImportService
+  apex_common.product_download_service:
+    class: Drupal\apex_migrations\Commands\ProductDownloadService
     tags:
       - { name: drush.command }
