--- a/config/gearwrench_au/default/field.field.paragraph.content.field_media_layout.yml
+++ b/config/gearwrench_au/default/field.field.paragraph.content.field_media_layout.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - classy_paragraphs.classy_paragraphs_style.content_media_layout__half_left
     - field.storage.paragraph.field_media_layout
     - paragraphs.paragraphs_type.content
 _core:
@@ -15,7 +16,9 @@ label: 'Media Layout'
 description: ''
 required: false
 translatable: false
-default_value: {  }
+default_value:
+  -
+    target_uuid: ad203eeb-c992-442c-acb3-cedc1ae39d64
 default_value_callback: ''
 settings:
   handler: classy_paragraphs
