--- a/config/gearwrench_au/default/core.entity_view_display.node.page.full.yml
+++ b/config/gearwrench_au/default/core.entity_view_display.node.page.full.yml
@@ -6,13 +6,77 @@ dependencies:
     - core.entity_view_mode.node.full
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_link
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
     - node.type.page
   module:
+    - blazy
     - entity_reference_revisions
+    - field_group
+    - link
     - text
     - user
+third_party_settings:
+  field_group:
+    group_pag:
+      children:
+        - group_left
+        - group_right
+      label: 'Page Heading'
+      parent_name: ''
+      region: content
+      weight: 0
+      format_type: html_element
+      format_settings:
+        classes: page-heading
+        show_empty_fields: false
+        id: ''
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+    group_left:
+      children:
+        - body
+      label: Left
+      parent_name: group_pag
+      region: content
+      weight: 1
+      format_type: html_element
+      format_settings:
+        classes: heading-left
+        show_empty_fields: false
+        id: ''
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+    group_right:
+      children:
+        - field_link
+      label: Right
+      parent_name: group_pag
+      region: content
+      weight: 2
+      format_type: html_element
+      format_settings:
+        classes: heading-right
+        show_empty_fields: false
+        id: ''
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
 _core:
   default_config_hash: sAvw4PYKRs5xwOlmxNQr31oWdxUXvkpGbwm1WSeP9T0
 id: node.page.full
@@ -25,7 +89,7 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 0
+    weight: 3
     region: content
   field_components:
     type: entity_reference_revisions_entity_view
@@ -34,11 +98,64 @@ content:
       view_mode: full
       link: ''
     third_party_settings: {  }
+    weight: 2
+    region: content
+  field_link:
+    type: link
+    label: hidden
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    weight: 3
+    region: content
+  field_media:
+    type: blazy_media
+    label: hidden
+    settings:
+      caption: {  }
+      class: ''
+      id: ''
+      image: ''
+      link: ''
+      overlay: ''
+      title: ''
+      vanilla: false
+      icon: ''
+      layout: ''
+      view_mode: ''
+      cache: 0
+      current_view_mode: ''
+      skin: ''
+      fx: ''
+      lazy: ''
+      loading: lazy
+      preload: false
+      style: ''
+      background: false
+      box_caption: ''
+      box_caption_custom: ''
+      box_media_style: ''
+      responsive_image_style: ''
+      box_style: ''
+      image_style: ''
+      media_switch: ''
+      ratio: ''
+      thumbnail_style: ''
+      _uri: ''
+      breakpoints: {  }
+      sizes: ''
+      grid_header: ''
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
+    third_party_settings: {  }
     weight: 1
     region: content
 hidden:
-  field_link: true
-  field_media: true
   field_meta_tags: true
   langcode: true
   links: true
