--- a/config/gearwrench_au/local/stage_file_proxy.settings.yml
+++ b/config/gearwrench_au/local/stage_file_proxy.settings.yml
@@ -1,5 +1,5 @@
 hotlink: false
-origin: 'https://dev-www.gearwrench.com.au'
-origin_dir: sites/gearwrench/files
+origin: 'https://username:password@stg-www.gearwrench.com.au'
+origin_dir: sites/gearwrench_au/files
 use_imagecache_root: true
 verify: false
