Added js, css, and updated for CT AU & US, GW AU & US, turned off ajax for GW

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -538,6 +538,8 @@ view--media-pages:
   css:
     component:
       css/libraries/view/media-pages.css: {}
+  js:
+    js/libraries/view/media-pages.js: {}
 
 view--taxonomy-term:
   version: 1.x
