VYRKCATG-373: Added the pop to top changes to the North American sites.

--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -241,6 +241,8 @@ node--full--product-brand:
   css:
     component:
       css/libraries/node/full--product-brand.css: { }
+  js:
+    js/libraries/node/full--product-brand.js: { }
 
 node--full--product-industry:
   version: 1.x
