--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -538,6 +538,8 @@ view--media-pages:
   css:
     component:
       css/libraries/view/media-pages.css: {}
+  js:
+    js/libraries/view/media-pages.js: {}
 
 view--taxonomy-term:
   version: 1.x
@@ -577,6 +579,8 @@ view--product-industry-grid:
   css:
     component:
       css/libraries/view/product-industry-grid.css: {}
+  js:
+    js/libraries/view/product-industry-grid.js: {}
 
 view--acquia-search:
   version: 1.x
